--- a/Jenkins/2/2.2/Jenkinsfile
+++ b/Jenkins/2/2.2/Jenkinsfile
@@ -3,10 +3,45 @@ library identifier: 'jenkins-pipeline-demo-library@master',
 
 pipeline {
     agent any
+    parameters {
+        booleanParam(name: 'RC', defaultValue: false, description: 'Is this a Release Candidate?')
+    }
+    environment {
+        VERSION = "0.1.0"        
+        VERSION_RC = "rc.2"
+    }
     stages {
         stage('Audit tools') {                        
             steps {
                 auditTools()
+            }
+        }
+        stage('Build') {
+            environment {
+                VERSION_SUFFIX = getVersionSuffix rcNumber: env.VERSION_RC, isReleaseCandidate: params.RC
+            }
+            steps {
+              echo "Building version: ${VERSION} with suffix: ${VERSION_SUFFIX}"
+              sh 'touch build.sh'
+            }
+        }
+        stage('Unit Test') {
+            steps {
+              echo "this is unit test"
+              }
+            }
+        stage('Smoke Test') {
+            steps {
+              echo "this is smoke test"
+            }
+        }
+        stage('Publish') {
+            when {
+                expression { return params.RC }
+            } 
+            steps {
+                writeFile file: 'publish-results.txt', text: 'published' 
+                archiveArtifacts 'publish-results.txt'
             }
         }
     }
